--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     content: '';
     position: absolute;
     inset: 0;
-    background-image: url(bg.jpg);
+    background-image: url(https://cdn.pixabay.com/photo/2021/10/11/17/54/technology-6701504_1280.jpg);
     background-size: cover;
     background-position: center;
     z-index: -1;
